# VulkanRenderer3D

./: CMakeLists.txt  README.MD
shaders/: bone_shader.frag  bone_shader.vert  hud.frag  hud.vert  simple_shader.frag  simple_shader.vert
src/: application.cpp  application.h  main.cpp
src/game/: camera.cpp  camera.h  game_object.cpp  game_object.h
src/input/: camera_controller.cpp  camera_controller.h
src/mesh/: MeshLoader.cpp  MeshLoader.h
src/model/: vulkr_model.cpp  vulkr_model.h
src/pipeline/: vulkr_device.cpp  vulkr_device.hpp  vulkr_pipeline.cpp  vulkr_pipeline.h  vulkr_swap_chain.cpp  vulkr_swap_chain.hpp
src/render/: bone_render_system.cpp  bone_render_system.h  simple_render_system.cpp  simple_render_system.h  vulkr_renderer.cpp  vulkr_renderer.h
src/render/hud/: hud_render_system.cpp  hud_render_system.h
src/utils/: utils.h
src/window/: vulkr_window.cpp  vulkr_window.h
